--- a/src/app/components/cart-left/cart-left.component.html
+++ b/src/app/components/cart-left/cart-left.component.html
@@ -10,7 +10,7 @@
             ></app-cart-left-form>
             <div>
                 <span>{{(orderProduct.product.price * orderProduct.quantity) | currency}}</span>
-                <button (click)="handleRemoveClick(orderProduct.product.id)">Remove</button>
+                <button (click)="handleRemoveClick(orderProduct.product)">Remove</button>
             </div>
         </div>
     </li>
