--- a/src/app/components/cart-right/cart-right.component.css
+++ b/src/app/components/cart-right/cart-right.component.css
@@ -55,9 +55,17 @@ select::-ms-expand {
 
 .input-group {
     display: flex;
+    align-items: flex-end;
     gap: 10px;
 }
 
+.error-message {
+    margin-bottom: 5px;
+    color: red;
+    font-style: italic;
+}
+
+.input-group>div,
 .input-group>label {
     width: 50%;
 }
@@ -68,6 +76,10 @@ label {
     background-color: var(--primary-background);
     border-radius: 0.375rem;
     border: 1px solid var(--border-color);
+}
+
+label.invalid {
+    border: 1px solid red;
 }
 
 label>small {
