--- a/src/app/components/toast/toast.component.css
+++ b/src/app/components/toast/toast.component.css
@@ -6,10 +6,20 @@
     border: 1px solid var(--border-color);
     border-radius: var(--border-radius);
     overflow: hidden;
+
+    opacity: 0.85;
 }
 
 .notification.success {
     background-color: green;
+}
+
+.notification.update {
+    background-color: var(--primary-accent);
+}
+
+.notification.danger {
+    background-color: red;
 }
 
 .notification-title {
