--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -2,5 +2,5 @@
 <h1>Products</h1>
 <app-products
     [products]="products$"
-    (addToCartClick)="addToCart($event)"
+    (addToCartClick)="handleAddToCartClick($event)"
 ></app-products>
