--- a/src/app/components/cart-left-form/cart-left-form.component.html
+++ b/src/app/components/cart-left-form/cart-left-form.component.html
@@ -7,6 +7,7 @@
         max="100"
         name="quantity"
         [(ngModel)]="quantity"
-        (keypress)="sanitizeInput($event)"
-        (change)="handleQuantityChange()">
+        maxlength="3"
+        (blur)="handleQuantityChange($event)"
+        (keypress)="sanitizeInput($event)">
 </form>
