Fixes cart quantity validation

--- a/src/app/components/cart-left-form/cart-left-form.component.html
+++ b/src/app/components/cart-left-form/cart-left-form.component.html
@@ -8,6 +8,6 @@
         name="quantity"
         [(ngModel)]="quantity"
         maxlength="3"
-        (blur)="handleQuantityChange($event)"
+        (change)="handleQuantityChange($event)"
         (keypress)="sanitizeInput($event)">
 </form>
