--- a/src/app/components/cart-right/cart-right.component.html
+++ b/src/app/components/cart-right/cart-right.component.html
@@ -4,39 +4,39 @@
         <h4>Personal Information</h4>
         <div class="input-group">
             <div>
-                <small *ngIf="firstName.touched && firstName.invalid" class="error-message">Please use valid first name</small>
-                <label [class.invalid]="firstName.touched && firstName.invalid">
+                <small *ngIf="formControls.firstName.error" class="error-message">Please use valid first name</small>
+                <label [class.invalid]="formControls.firstName.error">
                     <small>First Name</small>
-                    <input type="text" name="firstName" placeholder="Happy" [(ngModel)]="formControls.firstName" #firstName="ngModel" [ngModelOptions]="{updateOn: 'blur'}" required maxlength="16" pattern="\b([A-Za-z][-,a-z. ']+[ ]*)+">
+                    <input type="text" name="firstName" placeholder="Happy" [(ngModel)]="formControls.firstName.value" #firstName="ngModel" [ngModelOptions]="{updateOn: 'blur'}" (ngModelChange)="validateInput($event, 'firstName')" required maxlength="16" pattern="\b([A-Za-z][-,a-z. ']+[ ]*)+">
                 </label>
             </div>
             <div>
-                <small *ngIf="lastName.touched && lastName.invalid" class="error-message">Please use valid last name</small>
-                <label [class.invalid]="lastName.touched && lastName.invalid">
+                <small *ngIf="formControls.lastName.error" class="error-message">Please use valid last name</small>
+                <label [class.invalid]="formControls.lastName.error">
                     <small>Last Name</small>
-                    <input type="text" name="lastName" placeholder="Buyer" [(ngModel)]="formControls.lastName" #lastName="ngModel" [ngModelOptions]="{updateOn: 'blur'}" required maxlength="16" pattern="\b([A-Za-z][-,a-z. ']+[ ]*)+">
+                    <input type="text" name="lastName" placeholder="Buyer" [(ngModel)]="formControls.lastName.value" #lastName="ngModel" [ngModelOptions]="{updateOn: 'blur'}" (ngModelChange)="validateInput($event, 'lastName')" required maxlength="16" pattern="\b([A-Za-z][-,a-z. ']+[ ]*)+">
                 </label>
             </div>
         </div>
         <div>
-            <small *ngIf="streetAddress.touched && streetAddress.invalid" class="error-message">Street address is invalid</small>
-            <label [class.invalid]="streetAddress.touched && streetAddress.invalid">
+            <small *ngIf="formControls.streetAddress.error" class="error-message">Street address is invalid</small>
+            <label [class.invalid]="formControls.streetAddress.error">
                 <small>Street Address</small>
-                <input type="text" name="streetAddress" placeholder="1234 Ng Road" [(ngModel)]="formControls.streetAddress" #streetAddress="ngModel" [ngModelOptions]="{updateOn: 'blur'}" required minlength="2" maxlength="50" pattern="^\s*\S+(?:\s+\S+){2}">
+                <input type="text" name="streetAddress" placeholder="1234 Ng Road" [(ngModel)]="formControls.streetAddress.value" #streetAddress="ngModel" [ngModelOptions]="{updateOn: 'blur'}" (ngModelChange)="validateInput($event, 'streetAddress')" required minlength="2" maxlength="50" pattern="^\s*\S+(?:\s+\S+){2}">
             </label>
         </div>
         <div>
-            <small *ngIf="addressUnit.touched && addressUnit.invalid" class="error-message">Address unit is invalid</small>
-            <label [class.invalid]="addressUnit.touched && addressUnit.invalid">
+            <small *ngIf="formControls.addressUnit.error" class="error-message">Address unit is invalid</small>
+            <label [class.invalid]="formControls.addressUnit.error">
                 <small>Apartment, Suite, Unit, etc. (optional)</small>
-                <input type="text" name="addressUnit" placeholder="Unit 4200" [(ngModel)]="formControls.addressUnit" #addressUnit="ngModel" maxlength="16">
+                <input type="text" name="addressUnit" placeholder="Unit 4200" [(ngModel)]="formControls.addressUnit.value" #addressUnit="ngModel" maxlength="16" (ngModelChange)="validateInput($event, 'addressUnit')">
             </label>
         </div>
         <div>
-            <small *ngIf="city.touched && city.invalid" class="error-message">City is invalid</small>
-            <label [class.invalid]="city.touched && city.invalid">
+            <small *ngIf="formControls.city.error" class="error-message">City is invalid</small>
+            <label [class.invalid]="formControls.city.error">
                 <small>City</small>
-                <input type="text" name="city" placeholder="San Francisco" [(ngModel)]="formControls.city" #city="ngModel" [ngModelOptions]="{updateOn: 'blur'}" required minlength="2" maxlength="16" pattern="^[a-zA-Z][a-zA-Z\s-]+[a-zA-Z]$">
+                <input type="text" name="city" placeholder="San Francisco" [(ngModel)]="formControls.city.value" #city="ngModel" [ngModelOptions]="{updateOn: 'blur'}" (ngModelChange)="validateInput($event, 'city')" required minlength="2" maxlength="16" pattern="^[a-zA-Z][a-zA-Z\s-]+[a-zA-Z]$">
             </label>
         </div>
         <div class="input-group">
@@ -97,10 +97,10 @@
                 </select>
             </label>
             <div>
-                <small *ngIf="zipCode.touched && zipCode.invalid" class="error-message">Zip code is invalid</small>
-                <label [class.invalid]="zipCode.touched && zipCode.invalid">
+                <small *ngIf="formControls.zipCode.error" class="error-message">Zip code is invalid</small>
+                <label [class.invalid]="formControls.zipCode.error">
                     <small>Zip Code</small>
-                    <input type="text" name="zipCode" placeholder="12345" [(ngModel)]="formControls.zipCode" #zipCode="ngModel" [ngModelOptions]="{updateOn: 'blur'}" required maxlength="5" pattern="^([0-9]{5})$">
+                    <input type="text" name="zipCode" placeholder="12345" [(ngModel)]="formControls.zipCode.value" #zipCode="ngModel" [ngModelOptions]="{updateOn: 'blur'}" (ngModelChange)="validateInput($event, 'zipCode')" required maxlength="5" pattern="^([0-9]{5})$">
                 </label>
             </div>
         </div>
@@ -108,25 +108,25 @@
     <div class="form-payment">
         <h4>Payment Details</h4>
         <div>
-            <small *ngIf="ccNumber.touched && ccNumber.invalid" class="error-message">Credit card number is invalid</small>
-            <label [class.invalid]="ccNumber.touched && ccNumber.invalid">
+            <small *ngIf="formControls.ccNumber.error" class="error-message">Credit card number is invalid</small>
+            <label [class.invalid]="formControls.ccNumber.error">
                 <small>Credit Card Number</small>
-                <input type="text" name="ccNumber" placeholder="5555-5555-5555-5555" [(ngModel)]="formControls.ccNumber" #ccNumber="ngModel" [ngModelOptions]="{updateOn: 'blur'}" required maxlength="19" pattern="^([0-9]{4}[-.]?[0-9]{4}[-.]?[0-9]{4}[-.]?[0-9]{4})$">
+                <input type="text" name="ccNumber" placeholder="5555-5555-5555-5555" [(ngModel)]="formControls.ccNumber.value" #ccNumber="ngModel" [ngModelOptions]="{updateOn: 'blur'}" (ngModelChange)="validateInput($event, 'ccNumber')" required maxlength="19" pattern="^([0-9]{4}[-.]?[0-9]{4}[-.]?[0-9]{4}[-.]?[0-9]{4})$">
             </label>
         </div>
         <div class="input-group">
             <div>
-                <small *ngIf="ccCode.touched && ccCode.invalid" class="error-message">Security code is invalid</small>
-                <label [class.invalid]="ccCode.touched && ccCode.invalid">
+                <small *ngIf="formControls.ccCode.error" class="error-message">Security code is invalid</small>
+                <label [class.invalid]="formControls.ccCode.error">
                     <small>Security Code</small>
-                    <input type="text" name="ccCode" placeholder="***" [(ngModel)]="formControls.ccCode" #ccCode="ngModel" [ngModelOptions]="{updateOn: 'blur'}" required maxlength="3" pattern="^([0-9]{3})$">
+                    <input type="text" name="ccCode" placeholder="***" [(ngModel)]="formControls.ccCode.value" #ccCode="ngModel" [ngModelOptions]="{updateOn: 'blur'}" (ngModelChange)="validateInput($event, 'ccCode')" required maxlength="3" pattern="^([0-9]{3})$">
                 </label>
             </div>
             <div>
-                <small *ngIf="ccDate.touched && ccDate.invalid" class="error-message">Expiration date is invalid</small>
-                <label [class.invalid]="ccDate.touched && ccDate.invalid">
+                <small *ngIf="formControls.ccDate.error" class="error-message">Expiration date is invalid</small>
+                <label [class.invalid]="formControls.ccDate.error">
                     <small>Expiration Date</small>
-                    <input type="text" name="ccDate" placeholder="MM/YY" [(ngModel)]="formControls.ccDate" #ccDate="ngModel" [ngModelOptions]="{updateOn: 'blur'}" required maxlength="5" pattern="^(0[1-9]|1[0-2])\/?([0-9]{2})$">
+                    <input type="text" name="ccDate" placeholder="MM/YY" [(ngModel)]="formControls.ccDate.value" #ccDate="ngModel" [ngModelOptions]="{updateOn: 'blur'}" (ngModelChange)="validateInput($event, 'ccDate')" required maxlength="5" pattern="^(0[1-9]|1[0-2])\/?([0-9]{2})$">
                 </label>
             </div>
         </div>
