--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
     <p>
         by
         <span class="link">
-            <a href="https://github.com/tyeporter" target="_blank">@tyeporter</a>
+            <a href="https://github.com/4orter" target="_blank">@tyeporter</a>
         </span>
     </p>
 </footer>
